--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,3 @@
-before:
-  hooks:
-    - go mod tidy
 builds:
   - env:
       - CGO_ENABLED=0
@@ -10,7 +7,7 @@ builds:
     goarch:
       - amd64
     binary: go-webapp
-    dir: minimal-go-app
+    dir: minimal-go-app/
 archives:
   - format: binary
     name_template: "{{ .Binary }}_{{ .Os }}_{{ .Arch }}"
