--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         with:
           context: ./minimal-go-app
           push: true
-          tags: ${{ github.ref }}
+          tags: ${GITHUB_REF#refs/*/}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
